--- a/lógica/verifica_jogo.html
+++ b/lógica/verifica_jogo.html
@@ -6,8 +6,8 @@
 <script>
     var segredo = Math.round(Math.random() * 10);
 
-    var input = document.querySelector("input");
-        input.focus();
+    var input = document.querySelector("input");    //chama input do html
+        input.focus();                               //caixa input piscando indicando
 
     function verifica() {
 
@@ -19,8 +19,8 @@
         alert("Você ERROU!!!!!!!!");
         }
 
-                input.value = "";
-                input.focus();
+                input.value = "";   //apaga os dados do input
+                input.focus();      //caixa input piscando indicando
 
     }
 
